fix: vertical alignment

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -11,6 +11,10 @@
     url("fonts/lato-v17-latin-700.woff") format("woff");
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
   font-family: Lato, sans-serif;
   display: flex;
